added final word to loss screen

--- a/src/App.css
+++ b/src/App.css
@@ -6,5 +6,11 @@
 }
 
 #heading {
+  padding-top: 20px;
   font-family: 'Shrikhand', 'Roboto', 'Arial';
+}
+
+hr {
+  margin-left:25%;
+  margin-right: 25%;
 }
